# modelAPI

./: .env.example  .gitignore  AGENT.md  README.md  pyproject.toml
.zed/: settings.json
app/: __init__.py  main.py
app/api/: __init__.py  routes.py
app/core/: __init__.py  config.py  security.py
app/models/tabr/: __init__.py  encoder.py  lit_tabr.py  value_correction.py
app/preprocessing/: __init__.py  poc.py  quadran.py  roi_extractor.py  vektor.py
app/services/: __init__.py  base.py  model_registry.py
app/services/handlers/: __init__.py  tabr_handler.py
app/utils/: __init__.py  helpers.py
